--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.2.5",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@next/font": "^13.1.5",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
